fix dark mode on gametitle

--- a/client/src/components/GameTitle/GameTitle.scss
+++ b/client/src/components/GameTitle/GameTitle.scss
@@ -5,11 +5,7 @@
 
 .gametitle {
   @include flex-column-center-center;
-  background-color: $white;
-  color: $black;
   text-align: center;
-  width: 100%;
-  height: 100vh;
   padding: 1rem;
   font-size: 0.75rem;
   line-height: 1.5;
