--- a/client/src/components/GameWindow/GameWindow.scss
+++ b/client/src/components/GameWindow/GameWindow.scss
@@ -10,7 +10,7 @@
   color: $black;
   text-align: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   font-family: "Press Start 2P", cursive;
   font-size: 0.75rem;
   line-height: 1.5;
@@ -37,7 +37,7 @@
   &__dark {
     background-color: $black;
     width: 100%;
-    height: 500vh;
+    height: 100%;
     color: $white;
     transition: 1s all ease;
 
